Made a working structure for celestialobjects (planets + stars). Tested by simnulating a circular orbit for the Earth around the Sun for a year and the same ICs as given in tutorial. Lots of possibilities for fun numerical experiments.

--- a/5thPractical/Makefile
+++ b/5thPractical/Makefile
@@ -2,8 +2,11 @@ CXX=g++
 CCFLAGS=-Wall -ansi -pedantic -O3
 LDFLAGS=
 
-main: CelestialObject.o
-	$(CXX) $(CFLAGS) main.o CelestialObject.o -o SimulateOrbit $(LDFLAGS)
+GivenICs: GivenICs.o CelestialObject.o
+	$(CXX) $(CFLAGS) GivenICs.o CelestialObject.o -o GivenICs $(LDFLAGS)
+
+OneYear: OneYear.o CelestialObject.o
+	$(CXX) $(CFLAGS) OneYear.o CelestialObject.o -o OneYear $(LDFLAGS)
 
 %.o: %.cc
 	$(CXX) $(CFLAGS) $< -c -o $@
